--- a/Unit_1/index.html
+++ b/Unit_1/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Justin's Business</title>
+	<title>Justin's Silly Business</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>Justin's Business</h1>
+	<h1>Justin's Silly Business</h1>
 	<p>This is the silly business of Justin Reed</p>
+	<p>It's been a long time since I started with the basics. Seems boring at first but it is always nice to step back and remember how it started</p>
 </body>
 </html>
