--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -22,7 +22,7 @@
 		</div>
 
 		<!--About section-->
-		<section><a name="about"></a>
+		<section id="about">
 			<div class="title blue">
 				<h1>About</h1>
 				<ul class="title_nav">
@@ -33,12 +33,12 @@
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
-			<div class="content left">
+			<div class="content left"><a name="about"></a>
 				<div class="content_container">
 					<h2>Project Management</h2>
 					<hr>
 					<p>I am a results-driven, hands-on, detail-oriented project manager who works proactively in a team environment. Proven problem-solving and risk-managment skills providing a solution-based approach to problems.</p>
-					<ul id="about_content">
+					<ul>
 						<li>Experienced in managing software localization and linguistic review activities for software user interfaces, documentation, and release notes from program inception to release, ensuring deliverables completed on time and within budget.</li>
 						<li>Cross-functional communications across teams providing project status updates.</li>
 						<li>Forecast and track budget expenditures for assigned projects.</li>
@@ -60,7 +60,7 @@
 		</section>
 		<br>
 		<!--Resume section-->
-		<section><a name="resume"></a>
+		<section id="resume">
 			<div class="title coral">
 				<h1>Resum&#233</h1>
 				<ul class="title_nav">
@@ -71,7 +71,7 @@
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
-			<div class="content right">
+			<div class="content right"><a name="resume"></a>
 				<div class="content_container">
 					<h2>Experience</h2>
 					<hr>
@@ -101,7 +101,7 @@
 		</section>
 		<br>
 		<!--contact section-->
-		<section id="contact"><a name="contact"></a>
+		<section id="contact">
 			<div class="title blue">
 				<h1>Contact</h1>
 				<ul class="title_nav">
@@ -112,7 +112,7 @@
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
-			<div class="content left">
+			<div class="content left"><a name="contact"></a>
 				<div class="content_container contactP">
 					<h2>Professional</h2>
 					<hr><br>
